--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,1 +1,15 @@
-package config
+# The class cannot be named by Pascal or camel case.
+# The class cannot be named by Pascal or camel case.
+# If it is not used, the corresponding structure will not be set,
+# and it will not be read naturally.
+
+
+
+rpcport: #rpc服务端口 默认即可
+  openImMessageGatewayPort: [ 10140 ]
+
+longconnsvr:
+  openImWsPort: [ 10001 ] # ws服务端口，默认即可，要开放此端口或做nginx转发
+  websocketMaxConnNum: 10000 # 最大连接数
+  websocketMaxMsgLen: 4096 // 最大读取消息
+  websocketTimeOut: 10 // socket连接超时时间
