--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,10 +3,16 @@
 # If it is not used, the corresponding structure will not be set,
 # and it will not be read naturally.
 
-
+#---------------Infrastructure configuration---------------------#
+etcd:
+  etcdSchema: openim  #默认即可
+  etcdAddr: [ 127.0.0.1:2379 ] #单机部署时，默认即可(etcd地址)
 
 rpcport: #rpc服务端口 默认即可
   openImMessageGatewayPort: [ 10140 ]
+
+rpcregistername: #rpc注册服务名，默认即可
+  openImMsgName: Msg
 
 longconnsvr:
   openImWsPort: [ 10001 ] # ws服务端口，默认即可，要开放此端口或做nginx转发
