--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,9 +13,15 @@ rpcport: #rpc服务端口 默认即可
 
 rpcregistername: #rpc注册服务名，默认即可
   openImMsgName: Msg
-
+log:
+#日志级别 6表示全都打印，测试阶段建议设置为6
+remainLogLevel: 6
 longconnsvr:
   openImWsPort: [ 10001 ] # ws服务端口，默认即可，要开放此端口或做nginx转发
   websocketMaxConnNum: 10000 # 最大连接数
-  websocketMaxMsgLen: 4096 // 最大读取消息
-  websocketTimeOut: 10 // socket连接超时时间
+  websocketMaxMsgLen: 4096 # 最大读取消息
+  websocketTimeOut: 10 # socket连接超时时间
+
+# prometheus每个服务监听的端口数量需要和rpc port保持一致
+prometheus:
+  messageGatewayPrometheusPort: [ 20140 ]
