--- a/config/config.yaml
+++ b/config/config.yaml
@@ -14,8 +14,12 @@ rpcport: #rpc服务端口 默认即可
 rpcregistername: #rpc注册服务名，默认即可
   openImMsgName: Msg
 log:
-#日志级别 6表示全都打印，测试阶段建议设置为6
-remainLogLevel: 6
+  storageLocation: ../logs/  # 持久化地址
+  rotationTime: 24 # 24小时
+  remainRotationCount: 2 #日志数量
+  #日志级别 6表示全都打印，测试阶段建议设置为6
+  remainLogLevel: 6
+
 longconnsvr:
   openImWsPort: [ 10001 ] # ws服务端口，默认即可，要开放此端口或做nginx转发
   websocketMaxConnNum: 10000 # 最大连接数
