--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,6 +7,9 @@
 etcd:
   etcdSchema: openim  #默认即可
   etcdAddr: [ 127.0.0.1:2379 ] #单机部署时，默认即可(etcd地址)
+  userName:
+  password:
+  secret:
 
 rpcport: #rpc服务端口 默认即可
   openImMessageGatewayPort: [ 10140 ]
