--- a/config/config.yaml
+++ b/config/config.yaml
@@ -53,6 +53,8 @@ rpcport: #rpc服务端口 默认即可
 
 rpcregistername: #rpc注册服务名，默认即可
   openImMsgName: Msg
+  openImPushName: Push
+  openImRelayName: Relay
 log:
   storageLocation: ../logs/  # 持久化地址
   rotationTime: 24 # 24小时
