--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,9 +12,9 @@ etcd:
   secret:
 
 mysql:
-  dbMysqlAddress: [ 127.0.0.1:13306 ] #mysql地址 目前仅支持单机，默认即可
-  dbMysqlUserName:  #mysql用户名，建议修改
-  dbMysqlPassword:  # mysql密码，建议修改
+  dbMysqlAddress: [ 127.0.0.1:3306 ] #mysql地址 目前仅支持单机，默认即可
+  dbMysqlUserName: root  #mysql用户名，建议修改
+  dbMysqlPassword: 123456 # mysql密码，建议修改
   dbMysqlDatabaseName: openIM_v2 #默认即可
   dbMaxOpenConns: 100 # 最大开启连接
   dbMaxIdleConns: 10 # 空闲连接数
@@ -49,8 +49,8 @@ listenIP: 0.0.0.0
 
 rpcport: #rpc服务端口 默认即可
   openImMessagePort: [ 10130 ] # rpc im消息端口
-  openImMessageGatewayPort: [ 10140 ]
-
+  openImMessageGatewayPort: [ 10140 ] # rpc 消息网关端口
+  openImPushPort: [ 10170 ] # rpc 推送端口
 rpcregistername: #rpc注册服务名，默认即可
   openImMsgName: Msg
   openImPushName: Push
