--- a/config/config.yaml
+++ b/config/config.yaml
@@ -21,6 +21,12 @@ mysql:
   dbMaxLifeTime: 5 #连接存活时间
   logLevel: 1 #1=slient 2=error 3=warn 4=info
 
+redis:
+  dbAddress: [ 127.0.0.1:6379 ] #redis地址 单机时，填写一个地址即可，使用redis集群时候，填写集群中多个节点地址（主从地址都可以填写，增加容灾能力），默认即可
+  dbUserName:     #only redis version 6.0+ need username
+  dbPassWord:  #redis密码 建议修改
+  enableCluster: false #如果外部redis以集群方式启动，需要打开此开关
+
 kafka:
   SASLUserName:
   SASLPassword:
@@ -48,6 +54,10 @@ rpcRegisterIP:
 #默认即可
 listenIP: 0.0.0.0
 
+api:
+  openImApiPort: [ 10002 ] #api服务端口，默认即可，需要开放此端口或做nginx转发
+  listenIP: 0.0.0.0
+
 rpcport: #rpc服务端口 默认即可
   openImMessagePort: [ 10130 ] # rpc im消息端口
   openImMessageGatewayPort: [ 10140 ] # rpc 消息网关端口
@@ -68,6 +78,15 @@ longconnsvr:
   websocketMaxConnNum: 10000 # 最大连接数
   websocketMaxMsgLen: 4096 # 最大读取消息
   websocketTimeOut: 10 # socket连接超时时间
+
+#msg log insert to db 持久化消息到mysql
+chatpersistencemysql: true
+
+#token config token相关配置
+tokenpolicy:
+  accessSecret:  #token生成相关，默认即可
+  # Token effective time day as a unit
+  accessExpire:  #token过期时间（天） 默认即可
 
 # prometheus每个服务监听的端口数量需要和rpc port保持一致
 prometheus:
