--- a/config/config.yaml
+++ b/config/config.yaml
@@ -62,6 +62,7 @@ rpcport: #rpc服务端口 默认即可
   openImMessagePort: [ 10130 ] # rpc im消息端口
   openImMessageGatewayPort: [ 10140 ] # rpc 消息网关端口
   openImPushPort: [ 10170 ] # rpc 推送端口
+  openImAuthPort: [ 10160 ] # rpc 鉴权端口
 rpcregistername: #rpc注册服务名，默认即可
   openImMsgName: Msg
   openImPushName: Push
