--- a/config/config.yaml
+++ b/config/config.yaml
@@ -74,11 +74,19 @@ log:
   #日志级别 6表示全都打印，测试阶段建议设置为6
   remainLogLevel: 6
 
+modulename: #日志文件按模块命名，默认即可
+  longConnSvrName: msg_gateway
+  msgTransferName: msg_transfer
+  pushName: push
+
 longconnsvr:
   openImWsPort: [ 10001 ] # ws服务端口，默认即可，要开放此端口或做nginx转发
   websocketMaxConnNum: 10000 # 最大连接数
   websocketMaxMsgLen: 4096 # 最大读取消息
   websocketTimeOut: 10 # socket连接超时时间
+
+# 注册，登录密钥配置
+secret: 123456
 
 #msg log insert to db 持久化消息到mysql
 chatpersistencemysql: true
