--- a/config/config.yaml
+++ b/config/config.yaml
@@ -87,6 +87,9 @@ longconnsvr:
 
 # 注册，登录密钥配置
 secret: 123456
+# 多端互踢策略
+# 1：多平台登录：Android、iOS、Windows、Mac 每种平台只能一个在线，web端可以多个同时在线
+multiloginpolicy: 1
 
 #msg log insert to db 持久化消息到mysql
 chatpersistencemysql: true
@@ -96,6 +99,21 @@ tokenpolicy:
   accessSecret:  #token生成相关，默认即可
   # Token effective time day as a unit
   accessExpire:  #token过期时间（天） 默认即可
+
+# 回调配置
+callback:
+  # callback url 需要自行更换callback url
+  callbackUrl: "http://127.0.0.1:8080/callback"
+  # 开启关闭操作前后回调的配置
+  callbackUserOnline:
+    enable: false
+    callbackTimeOut: 2
+  callbackUserOffline: # 用户离线回调
+    enable: false
+    callbackTimeOut: 2
+  callbackUserKickOff: # 用户被踢下线回调
+    enable: false
+    callbackTimeOut: 2
 
 # prometheus每个服务监听的端口数量需要和rpc port保持一致
 prometheus:
