--- a/config/config.yaml
+++ b/config/config.yaml
@@ -57,13 +57,18 @@ listenIP: 0.0.0.0
 api:
   openImApiPort: [ 10002 ] #api服务端口，默认即可，需要开放此端口或做nginx转发
   listenIP: 0.0.0.0
+cmsapi:
+  openImCmsApiPort: [ 10006 ] #管理后台api服务端口，默认即可，需要开放此端口或做nginx转发
+  listenIP: 0.0.0.0
 
 rpcport: #rpc服务端口 默认即可
+  openImUserPort: [ 10110 ] # rpc 用户信息端口
   openImMessagePort: [ 10130 ] # rpc im消息端口
   openImMessageGatewayPort: [ 10140 ] # rpc 消息网关端口
   openImPushPort: [ 10170 ] # rpc 推送端口
   openImAuthPort: [ 10160 ] # rpc 鉴权端口
 rpcregistername: #rpc注册服务名，默认即可
+  openImUserName: User
   openImMsgName: Msg
   openImPushName: Push
   openImRelayName: Relay
@@ -98,7 +103,7 @@ chatpersistencemysql: true
 tokenpolicy:
   accessSecret:  #token生成相关，默认即可
   # Token effective time day as a unit
-  accessExpire:  #token过期时间（天） 默认即可
+  accessExpire: 1 #token过期时间（天） 默认即可
 
 # 回调配置
 callback:
@@ -118,3 +123,10 @@ callback:
 # prometheus每个服务监听的端口数量需要和rpc port保持一致
 prometheus:
   messageGatewayPrometheusPort: [ 20140 ] ## 消息网关prometheus的端口
+
+#---------------demo configuration---------------------#
+#The following configuration items are applied to openIM Demo configuration
+#是否启动demo，如果自身没有账号体系，设置为true
+demo:
+  #demo对外服务端口，默认即可，需要开放此端口或做nginx转发
+  openImDemoPort: [ 10004 ]
