--- a/config/config.yaml
+++ b/config/config.yaml
@@ -90,6 +90,12 @@ longconnsvr:
   websocketMaxMsgLen: 4096 # 最大读取消息
   websocketTimeOut: 10 # socket连接超时时间
 
+manager:
+  #app管理员userID和对应的secret  建议修改。 用于管理后台登录，也可以用户管理后台对应的api
+  appManagerUid: [ "openIM123456","openIM654321", "openIM333", "openIMAdmin" ]
+  secrets: [ "openIM1","openIM2", "openIM333", "openIMAdmin" ]
+  appSysNotificationName: "系统通知"
+
 # 注册，登录密钥配置
 secret: 123456
 # 多端互踢策略
@@ -110,7 +116,7 @@ callback:
   # callback url 需要自行更换callback url
   callbackUrl: "http://127.0.0.1:8080/callback"
   # 开启关闭操作前后回调的配置
-  callbackUserOnline:
+  callbackUserOnline: # 用户上线回调
     enable: false
     callbackTimeOut: 2
   callbackUserOffline: # 用户离线回调
@@ -119,6 +125,10 @@ callback:
   callbackUserKickOff: # 用户被踢下线回调
     enable: false
     callbackTimeOut: 2
+  callbackBeforeAddFriend: # 添加好友前回调
+    enable: false
+    callbackTimeOut: 2
+    callbackFailedContinue: true
 
 # prometheus每个服务监听的端口数量需要和rpc port保持一致
 prometheus:
