--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,6 +19,9 @@
 # --| target: config/config.yaml
 # -----------------------------------------------------------------
 
+envs:
+  discovery: zookeeper
+
 ###################### Zookeeper ######################
 # Zookeeper configuration
 # It's not recommended to modify the schema
@@ -50,6 +53,19 @@ redis:
 api:
   openImApiPort: [ 10002 ]
   listenIP: 0.0.0.0
+
+###################### RPC Register Name Configuration ######################
+# RPC service names for registration, it's not recommended to modify these
+rpcRegisterName:
+  openImUserName: User
+  openImFriendName: Friend
+  openImMsgName: Msg
+  openImPushName: Push
+  openImMessageGatewayName: MessageGateway
+  openImGroupName: Group
+  openImAuthName: Auth
+  openImConversationName: Conversation
+  openImThirdName: Third
 
 ###################### Log Configuration ######################
 # Log configuration
