--- a/config/config.yaml
+++ b/config/config.yaml
@@ -44,6 +44,15 @@ redis:
   username: ''
   password: 123456
 
+###################### RPC configuration information ######################
+# RPC configuration
+#
+# IP address to register with zookeeper when starting RPC, the IP and corresponding rpcPort should be accessible by api/gateway
+# Default listen IP is 0.0.0.0
+rpc:
+  registerIP: ''
+  listenIP: 0.0.0.0
+
 ###################### API configuration information ######################
 # API configuration
 #
@@ -53,6 +62,21 @@ redis:
 api:
   openImApiPort: [ 10002 ]
   listenIP: 0.0.0.0
+
+###################### RPC Port Configuration ######################
+# RPC service ports
+# These ports are passed into the program by the script and are not recommended to modify
+# For launching multiple programs, just fill in multiple ports separated by commas
+# For example, [10110, 10111]
+rpcPort:
+  openImUserPort: [ 10110 ]
+  openImFriendPort: [ 10120 ]
+  openImMessagePort: [ 10130 ]
+  openImGroupPort: [ 10150 ]
+  openImAuthPort: [ 10160 ]
+  openImPushPort: [ 10170 ]
+  openImConversationPort: [ 10180 ]
+  openImThirdPort: [ 10190 ]
 
 ###################### RPC Register Name Configuration ######################
 # RPC service names for registration, it's not recommended to modify these
@@ -89,4 +113,16 @@ log:
 # The number of ports needs to be consistent with msg_transfer_service_num in script/path_info.sh
 prometheus:
   enable: false  # 开关
-  apiPrometheusPort: [20100] # api的prometheus端口
+  grafanaUrl: 172.28.0.1:13000
+  apiPrometheusPort: [ 20100 ]
+  userPrometheusPort: [ 20110 ]
+  friendPrometheusPort: [ 20120 ]
+  messagePrometheusPort: [ 20130 ]
+  messageGatewayPrometheusPort: [ 20140 ]
+  groupPrometheusPort: [ 20150 ]
+  authPrometheusPort: [ 20160 ]
+  pushPrometheusPort: [ 20170 ]
+  conversationPrometheusPort: [ 20230 ]
+  rtcPrometheusPort: [ 21300 ]
+  thirdPrometheusPort: [ 21301 ]
+  messageTransferPrometheusPort: [ 21400, 21401, 21402, 21403 ] # List of ports
