--- a/config/config.yaml
+++ b/config/config.yaml
@@ -35,6 +35,28 @@ zookeeper:
   username: ''
   password: ''
 
+###################### Mongo ######################
+# MongoDB configuration
+
+# If uri is not empty, it will be used directly for the MongoDB connection.
+# This is a complete MongoDB URI string.
+# Example: mongodb://user:password@host1:port1,host2:port2/dbname?options
+mongo:
+  uri: ''
+
+  # List of MongoDB server addresses.
+  # Used for constructing the MongoDB URI if 'uri' above is empty.
+  # For a standalone setup, specify the address of the single server.
+  # For a sharded cluster, specify the addresses of the Mongos servers.
+  # Example: [ '172.28.0.1:37017', '172.28.0.2:37017' ]
+  # Default MongoDB database name
+  # Maximum connection pool size
+  address: [ 127.0.0.1:27017 ]
+  database: `openIM_v3`
+  username:
+  password:
+  maxPoolSize: 100
+
 ###################### Redis configuration information ######################
 # Redis configuration
 #
@@ -114,6 +136,9 @@ log:
 manager:
   userID: [ "openIM123456", "openIM654321", "openIMAdmin" ]
   nickname: [ "system1", "system2", "system3" ]
+
+# Secret key
+secret: openIM123
 
 ###################### Prometheus ######################
 # Prometheus configuration for various services
